# OpenGL-Learning

./: CMakeLists.txt
core/: main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
